# masis

./: LICENSE  docker-compose.yml
backend/: .gitignore  Cargo.toml  cert.pem  key.pem
backend/entity/: Cargo.toml
backend/entity/src/: account.rs  lib.rs  prelude.rs  session.rs  users.rs
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  migrate13122024.rs
backend/src/: error.rs  handlers.rs  main.rs  state.rs
backend/src/service/: auth.rs  session.rs
backend/src/types/: account.rs  mod.rs  session.rs  user.rs
backend/src/utils/: jwt.rs
web/: package.json  pnpm-lock.yaml
web/app/routes/: home.tsx  registration.tsx
