[package]
name = "masis-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.1.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
migration = { path = "migration" }
entity = { path = "entity" }
listenfd = "1.0.1"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-ws = "0.3.0"
actix-cors = "0.7.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
uuid = { version = "1.11.0", features = ["v7"] }
chrono = "0.4.38"
bcrypt = "0.16.0"
thiserror = "2.0.6"
derive_more = { version = "1.0.0", features = ["display"] }
jwt-simple = "0.12.10"
sys-info = "0.9.1"
